On branch master Changes to be committed: 	modified:   README 	new file:   game-theory/nim_multiplication.cpp

--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Hi there,
 
-   This repository is for ACM-ICPC Programming Competition.
+   This repository is for ACM-ICPC Programming Competition, Greater New York Region.
+   This is my last chance to play this game on Sunday, Oct. 30.
    Enjoy it.
 
 Lanbo
